force-app/main/default/objects/Condition__c/Condition__c.object-meta.xml
<CustomObject>
    <label>Condition</label>
    <nameField>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>