force-app/main/default/objects/Condition__c/fields/Abatement_Date__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Date__c</fullName>
    <label>Abatement Date</label>
    <type>Date</type>
</CustomField>