force-app/main/default/objects/Condition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem List Item</fullName>
            </value>
            <value>
                <fullName>Encounter Diagnosis</fullName>
            </value>
            <value>
                <fullName>Health Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>