force-app/main/default/objects/Condition__c/fields/Diagnosis_Display__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Display__c</fullName>
    <label>Diagnosis Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>