force-app/main/default/objects/Condition__c/fields/Diagnosis_Ref__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Diagnosis_Display__c and Diagnosis_Code__c remain snapshot fields populated at selection.</description>
    <label>Diagnosis</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>