force-app/main/default/objects/Condition__c/listViews/All_Conditions.listView-meta.xml
<ListView>
    <fullName>All_Conditions</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Diagnosis_Display__c</columns>
    <columns>Diagnosis_Code__c</columns>
    <columns>Clinical_Status__c</columns>
    <columns>Category__c</columns>
    <columns>Onset_Date__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Conditions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>